css/index.css
@charset "utf-8";

/*********************
    Project Types
********************/
#projectTypes{
    flex-direction: column;
    letter-spacing: 0.3em;
    color: white;
    margin-top: 2vw;
}

.type{
    flex-direction: column;
    width: 100%;
    margin-top: 1.04vw;
}

.topType{
    justify-content: space-between;
}

.typeInfo{
    flex-direction: column;
}

.hoverImgSection{
    justify-content: flex-end;
    align-items: center;
    visibility: hidden;
    opacity: 0;
    transition: visibility 0.5s, opacity 0.5s linear;
    margin-right: 1.04vw;
}

.hoverImg{
    width: 6.875vw;
    margin-left: 1.042vw;
    transition: width 0.5s;
}

.title{
    font-family: montExtraLight;
    font-size: 4.375vw;
    transition: font-size 0.5s;
}

.projCount{
    margin-bottom: 0.52vw;
    font-family: montThin;
    font-size: 1.3vw;
    transition: font-size 0.5s;
}


/*********************
    Project Types
********************/
.projects{
    margin-top: 1.56vw;
    opacity: 0;
    visibility: collapse;
    display: none;
    flex-direction: column;
    transition: visibility 0.5s, opacity 0.5s linear, display 0.5s, max-height 0.2s;
}


.project{
    margin-bottom: 4.16vw;
    flex-direction: column;
}

.projectTitle{
    font-family: montMed;
    font-size: 2.08vw;
}

.projectTop, .projectMiddle{
    width: 100%;
    justify-content: space-between;
}

.projectMiddle > div{
    font-family: montThin;
    font-size: 1.3vw;
    width: 48vw;
    letter-spacing: 0.1em;
}

.projectBottom{
    margin-top: 1.56vw;
    display: flex;
    flex-wrap: nowrap;
    overflow-x:hidden;
    width: auto;
    -webkit-overflow-scrolling: touch;
}

.projectBottom:hover{
    overflow-x: scroll;
    -webkit-overflow-scrolling: touch;
}

.apps{
    margin-right: 1.04vw;
}

.projectDescription{
    text-align: justify;
}

.appDescription{
    text-align: right;
    margin-right: 1.04vw;
}

.appIcon{
    width: 2.08vw;
    height: 2.08vw;
    margin-left: 1.0vw;
}

.apps{
    align-items: center;
}

.projectImg{
    width: 13.02vw;
    height: 13.02vw;
    margin-right: 2.6vw;
    cursor: pointer;
}


/*********************
    IMAGE EXPANDED
********************/
#imageExpand{
    transition: all 1.0s ease;
    position: fixed;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
    justify-content: center;
    align-items: center;
    display: none;
    cursor: pointer;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    
}


/*********************
     MEDIA QUERIES
********************/

@media only screen and (min-width: 1020px) {
    
    .typeInfo:hover > div{
        font-family: montReg;
        cursor: pointer;
    }

    .topType:hover > section{
      visibility: visible;
      opacity: 1;
    }

}
@media only screen and (max-width: 1020px) {
    
    .typeInfo:hover > div{
        cursor: pointer;
    }
}

